--- a/frontend/src/pages/auth_pages/auth.css
+++ b/frontend/src/pages/auth_pages/auth.css
@@ -1,9 +1,20 @@
 .login{
-    border: 1px solid red;
+    border: 1px solid rgb(92, 87, 87);
     background-color: whitesmoke;
     border-radius: 10px;
     padding: 10px;
     margin: 0 auto;
     text-align: center;
     width: 30%;
+}
+@media only screen and (max-width: 768px) {
+    .login {
+        border: 1px solid rgb(92, 87, 87);
+        background-color: whitesmoke;
+        border-radius: 10px;
+        padding: 10px;
+        margin: 0 auto;
+        text-align: center;
+        width: 100%;
+    }
 }
