--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,11 +19,22 @@ body{
 .login_boxshadow {
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
-.booking{
-  align-self: center;
-  margin: 0 auto;
+.booking {
+  position: relative;
+  display: d-flex;
+}
+.booking h2 {
+  
 }
 .booking_form {
+  width: 100%;
+}
+
+.clientListHead{
   display: flex;
-  max-width: 23%;
+  justify-content: space-between;
+}
+
+.client_search{
+  max-width: 40%;
 }
