--- a/frontend/src/pages/admin_pages/admin.css
+++ b/frontend/src/pages/admin_pages/admin.css
@@ -33,7 +33,26 @@
 }
 .admin-dashboard{
     border-top: 3px solid red;
+    position: relative;
 }
+
+.seed_data_loading {
+  position: absolute;
+  margin-top: 15%;
+  /* background-image: url("../../../public/spinner.gif"); */
+  background-size: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  text-align: center;
+  justify-content: center;
+  height: 200px;
+  width: 100%;
+  opacity: 1;
+  z-index: 2;
+ }
+ .background_opacity {
+    opacity: 0.5;
+ }
 .admin-dashboard h1{
     text-align: center;
     background-color: rgb(212, 212, 197);
