--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,13 +19,16 @@ body {
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
 .booking {
+  width: 100%;
   position: relative;
-  display: d-flex;
+  align-items: center;
+  text-align: center;
 }
 .booking h2 {
 }
-.booking_form {
-  width: 100%;
+.booking .booking_form {
+  display: flex;
+  justify-content: center;
 }
 
 .clientListHead {
@@ -50,4 +53,51 @@ body {
   color: whitesmoke;
 }
 
+.seed_data_loading {
+  position: absolute;
+  margin-top: 12%;
+  /* background-image: url("../../../public/spinner.gif"); */
+  background-size: auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  text-align: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  opacity: 1;
+  z-index: 2;
+}
 
+.notfound {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.notfound img {
+  width: 100%;
+  height: 100%;
+}
+.notfound_back {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  align-items: left;
+}
+
+.home_page {
+  text-align: center;
+}
+
+.home_page h1 {
+  margin-top: 20px;
+  padding: 10px;
+  border-bottom: 1px dashed rgb(89, 88, 95);
+}
+
+.show_booking_details {
+  position: absolute;
+  margin: auto;
+  min-width: 1000px;
+  /* max-width: 180% !important; */ 
+}
