--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,7 @@ body {
 }
 .spin {
   margin-top: 50px;
-  background-image: url("../public/spinner.gif");
+  background-image: url("./assets/spinner.gif");
   background-size: auto;
   background-position: center;
   background-repeat: no-repeat;
